@@ -5,6 +5,12 @@
 
 Not to mention all bugfixes and rewrites.
 
+Coccinella-0.9*
+
+ o removed the p2p whiteboard mode
+
+
+
 Coccinella-0.95.16 (20070214):
 
  o new dynamic status menus
